--- a/ntu-cooler/package.json
+++ b/ntu-cooler/package.json
@@ -16,6 +16,7 @@
     "apollo-utilities": "^1.3.4",
     "graphql": "^15.4.0",
     "js-cookie": "^2.2.1",
+    "mark.js": "^8.11.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
