--- a/ntu-cooler/package.json
+++ b/ntu-cooler/package.json
@@ -15,8 +15,8 @@
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
     "graphql": "^15.4.0",
+    "highlight-words-core": "^1.2.2",
     "js-cookie": "^2.2.1",
-    "mark.js": "^8.11.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
