--- a/ntu-cooler/package.json
+++ b/ntu-cooler/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +17,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "date-fns": "^2.16.1",
     "graphql": "^15.4.0",
     "highlight-words-core": "^1.2.2",
     "js-cookie": "^2.2.1",
