--- a/ntu-cooler/package.json
+++ b/ntu-cooler/package.json
@@ -22,6 +22,7 @@
     "highlight-words-core": "^1.2.2",
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
